--- a/CSS/style.css
+++ b/CSS/style.css
@@ -16,9 +16,33 @@
   --text-bold: 700;
 }
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 body {
   background-color: #fff;
   font-family: var(--main-font);
+}
+
+.container {
+  margin: 0 auto;
+  max-width: 1200px;
+  padding: 0 15px;
+}
+
+.head-container {
+  display: flex;
+  height: 80px;
+}
+
+. h1,
+h2,
+h3,
+p {
+  margin: 0;
 }
 
 /* header */
