--- a/CSS/style.css
+++ b/CSS/style.css
@@ -16,10 +16,13 @@
   --text-bold: 700;
 }
 
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
+.feature {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
+.example {
+  padding-bottom: 94px;
 }
 
 body {
@@ -38,7 +41,7 @@ body {
   height: 80px;
 }
 
-. h1,
+h1,
 h2,
 h3,
 p {
@@ -46,6 +49,9 @@ p {
 }
 
 /* header */
+.head {
+  border: 1px solid #ececec;
+}
 .logo {
   font-family: var(--secondary-font);
   font-weight: 700;
@@ -55,6 +61,10 @@ p {
   color: #2196f3;
   text-decoration: none;
   cursor: default;
+}
+.logo-head {
+  padding-top: 24px;
+  padding-bottom: 25px;
 }
 .logo-black {
   color: #000;
@@ -67,6 +77,12 @@ p {
   letter-spacing: 0.02em;
 
   color: var(--main-color);
+  display: flex;
+}
+.nav-list {
+  display: flex;
+  margin: 0 0 0 93px;
+  padding: 32px 0;
 }
 
 .link {
@@ -76,14 +92,32 @@ p {
 .list {
   list-style-type: none;
 }
+.nav-item {
+  margin-right: 50px;
+}
+
+.nav-item:last-child {
+  margin: 0;
+}
 
 .nav-link {
   font-weight: var(--text-medium);
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
-
   color: var(--main-color);
+}
+
+.nav-contact {
+  display: flex;
+}
+
+.head-contact {
+  margin: 0 0 0 auto;
+  padding: 32px 0;
+}
+.head-mail {
+  margin-right: 50px;
 }
 
 .head-mail,
@@ -113,6 +147,7 @@ p {
 
 .hero {
   background-color: #2f303a;
+  text-align: center;
 }
 
 .hero-title {
@@ -123,6 +158,8 @@ p {
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: #fff;
+  padding-top: 200px;
+  padding-bottom: 30px;
 }
 
 .hero-btn {
@@ -131,14 +168,13 @@ p {
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.06em;
-
   color: #fff;
-
   background: #2196f3;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   border: 0px;
   cursor: pointer;
+  margin-bottom: 200px;
 }
 
 /* main-start-page */
@@ -247,6 +283,8 @@ p {
 
 .footer {
   background: #2f303a;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 .logo-white {
