--- a/CSS/style.css
+++ b/CSS/style.css
@@ -154,6 +154,8 @@ img {
 .hero {
   background-color: #2f303a;
   text-align: center;
+  padding-top: 200px;
+  padding-bottom: 200px;
 }
 
 .hero-title {
@@ -164,7 +166,6 @@ img {
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: #fff;
-  padding-top: 200px;
   padding-bottom: 30px;
 }
 
@@ -182,7 +183,6 @@ img {
   border-radius: 4px;
   border: 0px;
   cursor: pointer;
-  margin-bottom: 200px;
 }
 
 /* main-start-page */
