--- a/CSS/style.css
+++ b/CSS/style.css
@@ -151,11 +151,22 @@ img {
   color: #2196f3;
 }
 
+.nav-contact-icon {
+  width: 16px;
+  height: 12px;
+  margin: 0;
+  padding: 0;
+}
+
 .hero {
   background-color: #2f303a;
   text-align: center;
   padding-top: 200px;
   padding-bottom: 200px;
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+  url(../img/header.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .hero-title {
