--- a/CSS/style.css
+++ b/CSS/style.css
@@ -30,6 +30,10 @@ body {
   font-family: var(--main-font);
 }
 
+.head {
+  border-bottom: 1px solid #ececec;
+}
+
 .container {
   margin-left: auto;
   margin-right: auto;
